# PhyMAP

./: CMakeLists.txt
PhyMAPBullet/: CMakeLists.txt
PhyMAPBullet/include/: Bullet.h  BulletSolverInstance.h  CollisionItem.h  Converter.h  RigidBodyState.h
PhyMAPBullet/src/: BulletSolverInstance.cpp  CollisionItem.cpp  RigidBodyState.cpp
PhyMAPCommon/: CMakeLists.txt
PhyMAPCommon/include/: Body.h  Common.h  MechanicalProperty.h  Mesh.h  MotionProperty.h  Quaternion.h  RigidBody.h  SolverInformation.h  SolverInstance.h  Transform.h  TriSurfaceMesh.h  Vector.h
PhyMAPCommon/src/: Mesh.cpp  Quaternion.cpp  TriSurfaceMesh.cpp  Vector.cpp
PhyMAPComponent/: CMakeLists.txt  PhyMAPComponent.csproj  PhyMAPComponentInfo.cs  PhyMAPMechanicalPropertyComponent.cs  PhyMAPMotionPropertyComponent.cs  PhyMAPRigidBodyComponent.cs  PhyMAPStaticRigidBodyComponent.cs  PhyMAPWorldComponent.cs
PhyMAPComponent/Etc/: RhinoLogger.cs
PhyMAPComponent/Logic/: AbstractTransfer.cs  RigidBodyBuilder.cs  ShapeBuilder.cs  StaticRigidBodyBuilder.cs  TransferMechanicalProperty.cs  TransferMotionProperty.cs  TransferRigidBody.cs  TransferStaticRigidBody.cs
PhyMAPComponent/Model/: PhyMAPMechanicalPropertyParam.cs  PhyMAPMechanicalPropertyType.cs  PhyMAPMotionPropertyParam.cs  PhyMAPMotionPropertyType.cs  PhyMAPRigidBodyParam.cs  PhyMAPRigidBodyType.cs  PhyMAPStaticRigidBodyParam.cs  PhyMAPStaticRigidBodyType.cs
PhyMAPComponent/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
PhyMAPComponent/Resources/: Icons.xcf
PhyMAPLib/: CMakeLists.txt
PhyMAPLib/include/: MechanicalPropertyWrapper.h  MotionPropertyWrapper.h  RigidBodyWrapper.h  Session.h  SolverInformationWrapper.h  Translator.h
PhyMAPLib/src/: MechanicalPropertyWrapper.cpp  MotionPropertyWrapper.cpp  RigidBodyWrapper.cpp  Session.cpp  SolverInformationWrapper.cpp
